--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,53 @@
 aiohttp==3.8.3
+aiohttp-swagger==1.0.16
 aiosignal==1.3.1
+argcomplete==2.0.0
 async-timeout==4.0.2
 attrs==22.1.0
+black==22.10.0
+chardet==4.0.0
 charset-normalizer==2.1.1
+click==8.1.3
 coverage==6.5.0
+dnspython==2.2.1
+email-validator==1.3.0
 exceptiongroup==1.0.1
 frozenlist==1.3.3
+genson==1.2.2
 idna==3.4
+inflect==5.6.2
 iniconfig==1.1.1
+isodate==0.6.1
+isort==5.10.1
+Jinja2==3.1.2
+jsonschema==3.2.0
+MarkupSafe==2.1.1
 multidict==6.0.2
+mypy-extensions==0.4.3
+openapi-schema-validator==0.1.6
+openapi-spec-validator==0.3.3
 packaging==21.3
+pathspec==0.10.1
+platformdirs==2.5.3
 pluggy==1.0.0
+prance==0.22.11.4.0
 pydantic==1.10.2
 pyparsing==3.0.9
+pyrsistent==0.16.1
+PySnooper==1.1.1
 pytest==7.2.0
 pytest-aiohttp==1.0.4
 pytest-asyncio==0.20.1
 pytest-cov==4.0.0
+PyYAML==6.0
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+semver==2.13.0
 six==1.16.0
+toml==0.10.2
 tomli==2.0.1
+typed-ast==1.5.4
 typing_extensions==4.4.0
+urllib3==1.26.12
 yarl==1.8.1
